<resources>
    <string name="app_name">Messaging</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_message_here">Type message Here</string>
    <string name="todo">TODO</string>
</resources>