<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/background_welcome_min"
    tools:context=".MainActivity"
    android:gravity="bottom">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textIsSelectable="false"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/login_Signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:onClick="onSigninClicked"
        android:layout_marginTop="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_register_button"
        android:background="@color/white"
        android:text="@string/register"
        android:textStyle="bold"
        android:onClick="onRegisterClicked"
        android:layout_marginTop="16dp"/>




</LinearLayout>